Added Python and Redis and a pub/sub model.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lkoudstaal/sse-prototype#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "redis": "^2.5.3"
   }
 }
